Add endpoints and refactor models
