# doc/api_spec.yaml
@@ -67,10 +67,33 @@ paths:
                 next: null
                 previous: null
                 items:
-                  - id: 1
+                  - id: 550e8400-e29b-41d4-a716-446655440000
                     name: "My First Event"
-                  - id: 2
+                  - id: 550e8400-e29b-41d4-a716-446655443333
                     name: "My Second Event"
+
+  /api/events/{eventUuid}:
+    get:
+      operationId: getEvent
+      summary: Returns am event's details
+      tags:
+        - Events
+      parameters:
+        - in: path
+          name: eventUuid
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: UUID of the event to get
+
+      responses:
+        "200":
+          description: A JSON object of the event
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/EventListItem"
 security:
   - bearerAuth: []
 
@@ -145,11 +168,15 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          example: 1
+          type: string
+          format: uuid
+          example: 550e8400-e29b-41d4-a716-446655440000
         name:
           type: string
           example: "My super event"
+        owner:
+          type: string
+          example: admin
 
     EventListPagination:
       allOf:
